--- a/.github/workflows/coverage.yaml
+++ b/.github/workflows/coverage.yaml
@@ -21,4 +21,4 @@ jobs:
         with:
           version: '0.15.0'
           args: '-- --test-threads 1'
-          out-type: 'Stdout'
+          out-type: 'stdout'
